--- a/index.html
+++ b/index.html
@@ -30,5 +30,21 @@
     <script src="https://www.w3schools.com/lib/w3.js"></script>
 </head>
 <body>
+    
+    <div class="row horizontal">
+        <div class="xs-12 primary-bg">
+            <div class="center-align">
+                <h1>Hilary Hampton</h1>
+                <h2>Subtitle goes here tbd irl.</h2>
+            </div>
+        </div>
+        <div class="xs-12 secondary-bg">
+            <div class="center-align">
+                <h1>Hilary Hampton</h1>
+                <h2>Subtitle goes here tbd irl.</h2>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
