add fullpage scroll js+css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2e205d">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ffffff">
-    <meta name="google-site-verification" content="IMkOlmJQdZtdUnVje25jSqTZXJLjfPm-zrTu5t8MwAw" />
     <!-- Social Share -->
     <meta property="og:title" content="Title Goes Here">
     <meta property="og:description" content="Mission statement or share description sentence goes here.">
@@ -28,20 +27,25 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <script type="text/javascript" src="assets/js/fullpage.js"></script>
+    <script type="text/javascript" src="assets/css/fullpage.css"></script>
+    
 </head>
 <body>
     
-    <div class="row horizontal">
-        <div class="xs-12 primary-bg">
-            <div class="center-align">
-                <h1>Hilary Hampton</h1>
-                <h2>Subtitle goes here tbd irl.</h2>
+    <div class="full-width full-height">
+        <div class="row horizontal">
+            <div class="xs-12 primary-bg">
+                <div class="center-align full-height sm-padding">
+                    <h1>Hilary Hampton</h1>
+                    <h2>Subtitle goes here tbd irl.</h2>
+                </div>
             </div>
-        </div>
-        <div class="xs-12 secondary-bg">
-            <div class="center-align">
-                <h1>Hilary Hampton</h1>
-                <h2>Subtitle goes here tbd irl.</h2>
+            <div class="xs-12 secondary-bg">
+                <div class="center-align full-height sm-padding">
+                    <h1>Hilary Hampton</h1>
+                    <h2>Subtitle goes here tbd irl.</h2>
+                </div>
             </div>
         </div>
     </div>
