--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 </head>
 <body>
     
-    <div class="full-width full-height">
-        <div class="row horizontal">
-            <div class="xs-12 primary-bg">
-                <div class="center-align full-height sm-padding">
+    <div class="">
+        <div class="fullpage">
+            <div class="section primary-bg">
+                <div class="sm-padding">
                     <h1>Hilary Hampton</h1>
                     <h2>Subtitle goes here tbd irl.</h2>
                 </div>
             </div>
-            <div class="xs-12 secondary-bg">
-                <div class="center-align full-height sm-padding">
+            <div class="section secondary-bg">
+                <div class="sm-padding">
                     <h1>Hilary Hampton</h1>
                     <h2>Subtitle goes here tbd irl.</h2>
                 </div>
