--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     
     <div class="">
-        <div class="fullpage">
+        <div id="fullpage">
             <div class="section primary-bg">
                 <div class="sm-padding">
                     <h1>Hilary Hampton</h1>
