update fullpage styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="">
         <div id="fullpage">
             <div class="section primary-bg">
-                <div class="sm-padding">
+                <div class="sm-padding white-color">
                     <h1>Hilary Hampton</h1>
                     <h2>Subtitle goes here tbd irl.</h2>
                 </div>
@@ -64,7 +64,9 @@
             navigationTooltips: ['firstSlide', 'secondSlide'],
             showActiveTooltip: true,
             slidesNavigation: false,
-            slidesNavPosition: 'bottom'
+            slidesNavPosition: 'bottom',
+            //more
+            fadingEffect: true
         });
         //methods
         fullpage_api.setAllowScrolling(false);
