--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/fullpage.js"></script>
-    <script type="text/javascript" src="assets/css/fullpage.css"></script>
+    <script type="text/css" src="assets/css/fullpage.css"></script>
     
 </head>
 <body>
