--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <!-- links & scripts -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" /> 
+    <link rel="stylesheet" type="text/css" href="fullpage.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/fullpage.js"></script>
-    <script type="text/css" src="assets/css/fullpage.css"></script>
+    
     
 </head>
 <body>
