--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div id="fullpage">
             <div class="section primary-bg">
-                <div class="sm-padding white-color">
+                <div class="sm-padding white">
                     <h1>Hilary Hampton</h1>
                     <h2>Subtitle goes here tbd irl.</h2>
                 </div>
