--- a/index.html
+++ b/index.html
@@ -34,36 +34,36 @@
     
     <div class="">
         <div class="main-menu absolute full-width full-height centered-text">
-            <ul id="menu">
-                <li data-menuanchor="Hello, World" class="active"><a href="#firstPage">Hilary Hampton</a></li>
-                <li data-menuanchor="Edison" class=""><a href="#secondPage">Edison Software</a></li>
-                <li data-menuanchor="Left Hook" class=""><a href="#thirdPage">Left Hook Design</a></li>
-                <li data-menuanchor="Project Four" class=""><a href="#fourthPage">Project Four</a></li>
-            </ul>
+            <div class="row full-width full-height">
+                <div class="full-width vertical-center">
+                <ul id="menu">
+                    <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hilary Hampton</a></li>
+                    <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
+                    <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
+                    <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Project Four</a></li>
+                </ul>
+                </div>
+            </div>
         </div>
         <div id="fullpage">
             <div class="section primary-bg">
                 <div class="sm-padding white">
-                    <h1>Hilary Hampton</h1>
-                    <h2>Subtitle goes here tbd irl.</h2>
+                    <h1></h1>
                 </div>
             </div>
-            <div class="section secondary-bg">
+            <div class="section dark-bg">
                 <div class="sm-padding">
-                    <h1>Edison Software</h1>
-                    <h2>Subtitle goes here tbd irl.</h2>
+                    <h1></h1>
                 </div>
             </div>
             <div class="section primary-bg">
                 <div class="sm-padding">
-                    <h1>Left Hook Design</h1>
-                    <h2>Subtitle goes here tbd irl.</h2>
+                    <h1></h1>
                 </div>
             </div>
-            <div class="section secondary-bg">
+            <div class="section dark-bg">
                 <div class="sm-padding">
-                    <h1>Fourth Slide</h1>
-                    <h2>Subtitle goes here tbd irl.</h2>
+                    <h1></h1>
                 </div>
             </div>
         </div>
@@ -76,22 +76,21 @@
             autoScrolling:true,
             scrollHorizontally: true,
             //navigation
+            anchors:['firstPage', 'secondPage', 'thirdPage', 'fourthPage'],
             menu: '#menu',
             lockAnchors: false,
-            anchors:['firstPage', 'secondPage', 'thirdPage', 'fourthPage', ],
             navigation: true,
             navigationPosition: 'right',
-            navigationTooltips: ['firstSlide', 'secondSlide', 'thirdSlide', 'fourthSlide',],
+            navigationTooltips: ['firstSlide', 'secondSlide', 'thirdSlide', 'fourthSlide'],
             showActiveTooltip: true,
             slidesNavigation: true,
             slidesNavPosition: 'bottom',
             //more
             fadingEffect: true,
             fadingEffect:'sections',
-            scrollBar: true
         });
-        //methods
-        fullpage_api.setAllowScrolling(false);
+        //disabling scrolling
+        //fullpage_api.setAllowScrolling(false);
 
     </script>
 </body>
