active links nav

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="">
         <div id="fullpage">
             <div class="section primary-bg white">
-                <div class="slide main-menu centered-text" data-anchor="navSlide">
+                <div class="slide main-menu centered-text" data-anchor="navSlide1">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
                             <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hilary Hampton</a></li>
@@ -55,8 +55,15 @@
                 </div>
             </div>
             <div class="section dark-bg">
-                <div class="slide centered-text" data-anchor="slide1">
-                    <h1>slide 1</h1>
+                <div class="slide main-menu centered-text" data-anchor="navSlide2">
+                    <div class="full-width full-height row">
+                        <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
+                            <li data-menuanchor="secondPage" class="active"><a href="#secondPage">Edison Software</a></li>
+                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Project Four</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="slide" data-anchor="slide1">
                     <h1>slide 2</h1>
@@ -69,8 +76,15 @@
                 </div>
             </div>
             <div class="section primary-bg white">
-                <div class="slide centered-text" data-anchor="slide1">
-                    <h1>slide 1</h1>
+                <div class="slide main-menu centered-text" data-anchor="navSlide3">
+                    <div class="full-width full-height row">
+                        <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
+                            <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
+                            <li data-menuanchor="thirdPage" class="active"><a href="#thirdPage">Left Hook Design</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Project Four</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="slide" data-anchor="slide1">
                     <h1>slide 2</h1>
@@ -80,8 +94,15 @@
                 </div>
             </div>
             <div class="section dark-bg">
-                <div class="slide centered-text" data-anchor="slide1">
-                    <h1>slide 1</h1>
+                <div class="slide main-menu centered-text" data-anchor="navSlide4">
+                    <div class="full-width full-height row">
+                        <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
+                            <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
+                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
+                            <li data-menuanchor="fourthPage" class="active"><a href="#fourthPage">Project Four</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="slide" data-anchor="slide1">
                     <h1>slide 2</h1>
