--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     
     <div class="">
         <div id="fullpage">
-            <div class="section primary-bg white">
+            <div class="section bg-image white" style="background-image: url('assets/img/bg-test.jpg');">
                 <div class="slide main-menu centered-text" data-anchor="navSlide1">
                     <div class="full-width full-height row">
-                        <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
+                        <ul id="menu" class="center">
                             <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hilary Hampton</a></li>
                             <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Project Four</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -57,11 +57,11 @@
             <div class="section dark-bg">
                 <div class="slide main-menu centered-text" data-anchor="navSlide2">
                     <div class="full-width full-height row">
-                        <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
+                        <ul id="menu" class="center">
                             <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
                             <li data-menuanchor="secondPage" class="active"><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Project Four</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -78,11 +78,11 @@
             <div class="section primary-bg white">
                 <div class="slide main-menu centered-text" data-anchor="navSlide3">
                     <div class="full-width full-height row">
-                        <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
+                        <ul id="menu" class="center">
                             <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
                             <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class="active"><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Project Four</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -96,11 +96,11 @@
             <div class="section dark-bg">
                 <div class="slide main-menu centered-text" data-anchor="navSlide4">
                     <div class="full-width full-height row">
-                        <ul id="menu" class="center" style="max-width: 600;  list-style-type: none !important;">
+                        <ul id="menu" class="center">
                             <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
                             <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class="active"><a href="#fourthPage">Project Four</a></li>
+                            <li data-menuanchor="fourthPage" class="active"><a href="#fourthPage">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
             fadingEffectKey: 'aGlmcm9taGlsYXJ5LmNvbV81ZkNabUZrYVc1blJXWm1aV04wN3Qy',
             fadingEffect: 'sections',
             //options here
-            autoScrolling:true,
+            autoScrolling: true,
             scrollHorizontally: true,
             //navigation
             anchors:['firstPage', 'secondPage', 'thirdPage', 'fourthPage'],
@@ -136,7 +136,7 @@
             controlArrows: true,
             slidesNavPosition: 'bottom',
             //more
-            lazyLoading: true,
+            lazyLoading: true
         });
         //disabling scrolling
         //fullpage_api.setAllowScrolling(false);
