--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon@32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon@16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2e205d">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffffff">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#ffffff">
     <!-- Social Share -->
@@ -36,8 +36,8 @@
     
     <div class="">
         <div id="fullpage">
-            <div class="section bg-image white" style="background-image: url('assets/img/bg-test.jpg');">
-                <div class="slide main-menu centered-text" data-anchor="navSlide1">
+            <div class="section bg-image white">
+                <div class="slide main-menu centered-text" data-anchor="navSlide1" style="background-image: url('assets/img/bg-test.jpg');">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
                             <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hilary Hampton</a></li>
