--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="slide main-menu centered-text" data-anchor="navSlide1" style="background-image: url('assets/img/bg-test.jpg');">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hilary Hampton</a></li>
+                            <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hi, I'm Hilary</a></li>
                             <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
                             <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
@@ -58,7 +58,7 @@
                 <div class="slide main-menu centered-text" data-anchor="navSlide2">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hi, I'm Hilary</a></li>
                             <li data-menuanchor="secondPage" class="active"><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
                             <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
@@ -79,7 +79,7 @@
                 <div class="slide main-menu centered-text" data-anchor="navSlide3">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hi, I'm Hilary</a></li>
                             <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class="active"><a href="#thirdPage">Left Hook Design</a></li>
                             <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
@@ -97,7 +97,7 @@
                 <div class="slide main-menu centered-text" data-anchor="navSlide4">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hilary Hampton</a></li>
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hi, I'm Hilary</a></li>
                             <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
                             <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
                             <li data-menuanchor="fourthPage" class="active"><a href="#fourthPage">Process</a></li>
