--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     
     <div class="">
         <div id="fullpage">
-            <div class="section bg-image white">
-                <div class="slide main-menu centered-text" data-anchor="navSlide1" style="background-image: url('assets/img/bg-test.jpg');">
+            <div class="section white">
+                <div class="slide main-menu centered-text bg-image" data-anchor="navSlide1" style="background-image: url('assets/img/bg-test.jpg');">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
                             <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hi, I'm Hilary</a></li>
