--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <div class="">
         <div id="fullpage">
-            <div class="section white">
+            <div class="section primary-bg white">
                 <div class="slide main-menu centered-text bg-image" data-anchor="navSlide1" style="background-image: url('assets/img/bg-test.jpg');">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
