--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello, World from Hilary</title>
+    <title>Hi, I'm Hilary</title>
     <!-- main -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="Mission statement or share description sentence goes here.">
