--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <div class="slide main-menu centered-text bg-image" data-anchor="navSlide1" style="background-image: url('assets/img/bg-test.jpg');">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Hi, I'm Hilary</a></li>
-                            <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
-                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
+                            <li data-menuanchor="firstPage" class="active"><a href="#firstPage" class="">Hi, I'm Hilary</a></li>
+                            <li data-menuanchor="secondPage" class=""><a href="#secondPage" class="">Edison Software</a></li>
+                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage" class="">Left Hook Design</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage" class="">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -58,10 +58,10 @@
                 <div class="slide main-menu centered-text" data-anchor="navSlide2">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hi, I'm Hilary</a></li>
-                            <li data-menuanchor="secondPage" class="active"><a href="#secondPage">Edison Software</a></li>
-                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage" class="">Hi, I'm Hilary</a></li>
+                            <li data-menuanchor="secondPage" class="active"><a href="#secondPage" class="">Edison Software</a></li>
+                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage" class="">Left Hook Design</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage" class="">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -79,10 +79,10 @@
                 <div class="slide main-menu centered-text" data-anchor="navSlide3">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hi, I'm Hilary</a></li>
-                            <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
-                            <li data-menuanchor="thirdPage" class="active"><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage">Process</a></li>
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage" class="">Hi, I'm Hilary</a></li>
+                            <li data-menuanchor="secondPage" class=""><a href="#secondPage" class="">Edison Software</a></li>
+                            <li data-menuanchor="thirdPage" class="active"><a href="#thirdPage" class="">Left Hook Design</a></li>
+                            <li data-menuanchor="fourthPage" class=""><a href="#fourthPage" class="">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -97,10 +97,10 @@
                 <div class="slide main-menu centered-text" data-anchor="navSlide4">
                     <div class="full-width full-height row">
                         <ul id="menu" class="center">
-                            <li data-menuanchor="firstPage" class=""><a href="#firstPage">Hi, I'm Hilary</a></li>
-                            <li data-menuanchor="secondPage" class=""><a href="#secondPage">Edison Software</a></li>
-                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage">Left Hook Design</a></li>
-                            <li data-menuanchor="fourthPage" class="active"><a href="#fourthPage">Process</a></li>
+                            <li data-menuanchor="firstPage" class=""><a href="#firstPage" class="">Hi, I'm Hilary</a></li>
+                            <li data-menuanchor="secondPage" class=""><a href="#secondPage" class="">Edison Software</a></li>
+                            <li data-menuanchor="thirdPage" class=""><a href="#thirdPage" class="">Left Hook Design</a></li>
+                            <li data-menuanchor="fourthPage" class="active"><a href="#fourthPage" class="">Process</a></li>
                         </ul>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
     
     <script>
     $(document).ready(function(){ 
-        $('#menu li.active a').addClass('active-styles').delay( 1600 ).queue(function () {; 
-            $('#menu li.active a').addClass('active-styles')
+        $( "#menu li.active a" ).delay( 1600 ).addClass( 'active-styles' );
+        
     });
     //$( "#foo" ).slideUp( 300 ).delay( 800 ).fadeIn( 400 );
     </script>
@@ -142,7 +142,20 @@
             controlArrows: true,
             slidesNavPosition: 'bottom',
             //more
-            lazyLoading: true
+            lazyLoading: true,
+            afterSlideLoad: function( section, origin, destination, direction){
+                var loadedSlide = this;
+
+                //first slide of the second section
+                if(section.anchor == 'secondPage' && destination.index == 1){
+                    alert("First slide loaded");
+                }
+
+                //second slide of the second section (supposing #secondSlide is the
+                //anchor for the second slide)
+                if(section.index == 1 && destination.anchor == 'secondSlide'){
+                    alert("Second slide loaded");
+                }             
         });
         //disabling scrolling
         //fullpage_api.setAllowScrolling(false);
