--- a/index.html
+++ b/index.html
@@ -142,20 +142,7 @@
             controlArrows: true,
             slidesNavPosition: 'bottom',
             //more
-            lazyLoading: true,
-            afterSlideLoad: function( section, origin, destination, direction){
-                var loadedSlide = this;
-
-                //first slide of the second section
-                if(section.anchor == 'secondPage' && destination.index == 1){
-                    alert("First slide loaded");
-                }
-
-                //second slide of the second section (supposing #secondSlide is the
-                //anchor for the second slide)
-                if(section.index == 1 && destination.anchor == 'secondSlide'){
-                    alert("Second slide loaded");
-                }             
+            lazyLoading: true        
         });
         //disabling scrolling
         //fullpage_api.setAllowScrolling(false);
