--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
             </div>
@@ -65,13 +65,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 4</h1>
                 </div>
             </div>
@@ -86,10 +86,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
             </div>
@@ -104,10 +104,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="slide1">
+                <div class="slide" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
             </div>
@@ -118,8 +118,8 @@
     
     <script>
     $(document).ready(function(){ 
-        $( "#menu li.active a" ).delay( 1600 ).addClass( 'active-styles' );
-        
+        $( "#menu li.active a" ).delay( 1600 ).addClass( 'active-styles' ); 
+        //$("#menu").hasClass("active")
     });
     //$( "#foo" ).slideUp( 300 ).delay( 800 ).fadeIn( 400 );
     </script>
@@ -142,7 +142,7 @@
             controlArrows: true,
             slidesNavPosition: 'bottom',
             //more
-            lazyLoading: true        
+            lazyLoading: true
         });
         //disabling scrolling
         //fullpage_api.setAllowScrolling(false);
