testing ready > click action for animation

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     
 
     <script>
-    $("section.active").ready(function(){ 
+    $("#menu li.active").click(function(){ 
         $( "#menu li.active a" ).delay( 1600 ).addClass( 'active-styles' ); 
         //$("#menu").hasClass("active")
     });
