--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         if ($("#menu li").hasClass("active")) {
            $("#menu li a").addClass("active-styles");
         } else { 
-          //  block of code to be executed if the condition is false
+          $("#menu li a").removeClass("active-styles");
         }
         
     });
