--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
     
 
     <script>
-    $(document).ready(function(){ 
-        $( "#menu li.active a" ).delay( 1600 ).addClass( 'active-styles' );  
+        $(document).ready(function(){ 
+            $('#menu li.active a').addClass('active-styles'); 
+        }); 
     </script>
     <script>
         new fullpage('#fullpage', {
