--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
             </div>
@@ -65,13 +65,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 4</h1>
                 </div>
             </div>
@@ -86,10 +86,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
             </div>
@@ -104,10 +104,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 2</h1>
                 </div>
-                <div class="slide" data-anchor="">
+                <div class="slide lg-padding" data-anchor="">
                     <h1>slide 3</h1>
                 </div>
             </div>
@@ -130,6 +130,8 @@
             //options here
             autoScrolling: true,
             scrollHorizontally: true,
+            continuousVertical: true,
+            loopHorizontal: true,
             //navigation
             anchors:['firstPage', 'secondPage', 'thirdPage', 'fourthPage'],
             //menu: '#menu',
