--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="slide" data-anchor="1about">
                     <div class="row middle lg-padding">
                         <h1>Hi, I'm Hilary.</h1>
-                        <h3>I'm a <span class="rotate">designer, frontend developer, creative director, nature lover, badass</span></h3>
+                        <h3>I'm a <span class="rotate">designer, frontend developer, creative director, nature lover, badass</span>.</h3>
                     </div>
                 </div>
                 <div class="slide">
