--- a/closet/nav-mobile.html
+++ b/closet/nav-mobile.html
@@ -1,13 +1,11 @@
 <div class="row max-width">
-    <div id="menu-icon" onclick="menuList()" class="col-xs-6 col-sm-6 sm-padding end-xs">
+    <div id="menu-icon" onclick="menuList()" class="sm-padding">
         <a><i class="material-icons">menu</i></a>
     </div>
 </div>
-<div id="menu-list" class="row max-width" style="display: none;">
-    <ul id="menu" class="max-width">
-        <li data-menuanchor="1about" class=""><a href="#1about" class="">About</a></li>
-        <li data-menuanchor="2edison" class=""><a href="#2edison" class="">Edison Software</a></li>
-        <li data-menuanchor="3lefthook" class=""><a href="#3lefthook" class="">Left Hook Design</a></li>
-        <li data-menuanchor="4contact" class=""><a href="#4contact" class="">Contact</a></li>
-    </ul>
-</div>
+<ul id="menu-list" class="row card xs-padding" style="display: none;">
+    <li data-menuanchor="1about" class=""><a href="#1about" class="">About</a></li>
+    <li data-menuanchor="2edison" class=""><a href="#2edison" class="">Edison Software</a></li>
+    <li data-menuanchor="3lefthook" class=""><a href="#3lefthook" class="">Left Hook Design</a></li>
+    <li data-menuanchor="4contact" class=""><a href="#4contact" class="">Contact</a></li>
+</ul>
