--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/simpletextrotator.css"/>
     <script type="text/javascript" src="assets/js/jquery.simple-text-rotator.js"></script> 
-    <script type="text/javascript" src="vendors/scrolloverflow.min.js"></script>
+    <script type="text/javascript" src="assets/js/scrolloverflow.js"></script>
     <script type="text/javascript" src="assets/js/fullpage.fadingEffect.min.js"></script>
     <script type="text/javascript" src="assets/js/fullpage.extensions.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/fullpage.css" />
@@ -46,38 +46,63 @@
                 <div class="slide bg-image" data-anchor="1about" style="background-image: url(assets/img/background-1.png)">
                     <div class="max-width middle md-padding">
                         <h1>Hi, I'm Hilary</h1>
-                        <div id="iam" class="sm-top-padding z-index">
+                        <div class="sm-top-padding z-index">
                             
                         </div>
                     </div>
                 </div>
                 <div class="slide bg-image" id="about-bio" data-anchor="about-bio" style="background-image: url(assets/img/background-2.png)">
-                    <div class="max-width row">
+                    <div class="sm-max-width row">
                         <div class="md-padding">
                             <h3 class="primary sm-bottom-padding">I'm a&nbsp; <span class="rotate underline">designer, coder, badass, planner, techie</span>.</h3>
-                            <p>I design solutions to problems for brands and clients. Fluent in all things design – from small businesses and startup needs, to large corporations. </p>
+                            <p>I design solutions to problems for brands and clients. Fluent in all things design – from small businesses and startup needs, and large corporations. Great designs start with well defined problems, and lots of planning. </p>
                         </div>
                     </div>
                 </div>
                 <div class="slide bg-image" id="about-3" data-anchor="about-3" style="background-image: url(assets/img/background-3.png)">
-                    <div class="max-width">
-                        <h1>slide 3</h1>
+                    <div class="max-width row">
+                        <div class="md-padding">
+                            <div class="row middle xs-padding sm-top-padding">
+                                <i class="material-icons inline">account_circle</i> 
+                                <h3 class="row sm-left-padding inline">Hilary Hampton</h3>
+                            </div>
+                            <div class="row middle xs-padding sm-top-padding">
+                                <i class="material-icons inline">school</i> 
+                                <h3 class="row sm-left-padding inline">Education</h3> 
+                            </div>
+                            <div class="row middle md-left-padding">
+                                <p>B.S. in Web Design & Development</p>
+                            </div>
+                            <div class="row middle xs-padding sm-top-padding">
+                                <i class="material-icons inline">work</i> 
+                                <h3 class="row sm-left-padding inline">Work</h3>
+                            </div>
+                            <div class="row middle md-left-padding">
+                                <p><b>UI/UX Designer</b> Edison Software</p>
+                            </div>
+                            <div class="row middle md-left-padding">
+                                <p><b>Creative Director</b> Left Hook Design</p>
+                            </div>
+                            <div class="row middle md-left-padding">
+                                <p><b>Production Designer</b> Cal State Monterey Bay</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="section " >
                 <div class="slide" data-anchor="2edison">
-                    <div class="max-width">
+                    <div class="max-width md-padding">
                         <h1>Edison Software</h1>
                     </div>
                 </div>
                 <div class="slide" data-anchor="">
-                    <div class="max-width">
+                    <div class="max-width md-padding">
                         <h1>slide 2</h1>
                     </div>
                 </div>
                 <div class="slide" data-anchor="">
-                    <div class="max-width">
+                    <div class="max-width md-padding">
                         <h1>slide 3</h1>
                     </div>
                 </div>
@@ -89,24 +114,24 @@
             </div>
             <div class="section white-bg primary">
                 <div class="slide" data-anchor="3lefthook">
-                    <div class="max-width">
+                    <div class="max-width md-padding">
                         <h1>Left Hook</h1>
                     </div>
                 </div>
                 <div class="slide" data-anchor="">
-                    <div class="max-width">
+                    <div class="max-width md-padding">
                         <h1>slide 2</h1>
                     </div>
                 </div>
                 <div class="slide" data-anchor="">
-                    <div class="max-width">
+                    <div class="max-width md-padding">
                         <h1>slide 3</h1>
                     </div>
                 </div>
             </div>
             <div class="section white-bg">
                 <div class="slide" data-anchor="4contact">
-                    <div class="max-width">
+                    <div class="max-width md-padding">
                         <h1>Contact</h1>
                         <a target="_blank" href="">
                             <div class="row middle">
@@ -170,7 +195,7 @@
             loopHorizontal: true,
             //navigation
             anchors:['1about', '2edison', '3lefthook', '4contact'],
-            menu: '#menu',
+            menu: ['#menu', '#menu-list'],
             lockAnchors: false,
             navigation: false,
             //navigationPosition: 'right',
