fix mobile nav + responsive fullpage.js

--- a/closet/nav-mobile.html
+++ b/closet/nav-mobile.html
@@ -1,5 +1,5 @@
 <div class="row max-width">
-    <div id="menu-icon" onclick="menuList()" class="sm-padding">
+    <div id="menu-icon" onclick="menuList()" class="xs-padding">
         <a><i class="material-icons">menu</i></a>
     </div>
 </div>
