--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
             //slidesNavPosition: 'bottom',
             //more
             lazyLoading: true,
+            responsiveWidth: 780
             //fixedElements: '#iam'
+            
         });
         //disabling scrolling
         //fullpage_api.setAllowScrolling(false);
@@ -183,7 +185,7 @@
     $(".rotate").textrotator({
       animation: "flip", // Options are: dissolve (default), fade, flip, flipUp, flipCube, flipCubeUp, spin.
       separator: ",", // If you don't want commas to be the separator, you can define a new separator here (|, &, * etc)
-      speed: 2000 // Delay in milliseconds
+      speed: 3000 // Delay in milliseconds
     });
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
