social media links

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                 <div class="slide" data-anchor="4contact">
                     <div class="sm-max-width">
                         <h1>Contact</h1>
-                        <a target="_blank" href="">
+                        <a target="_blank" href="https://www.instagram.com/hifromhilary">
                             <div class="row middle">
                                 <img class="inline icon-30 xs-padding" src="assets/img/icon-insta-black.svg">
                                 <p class="inline sm-left-padding"><b>Instagram</b> @hifromhilary</p>
                                 <i class="material-icons inline">keyboard_arrow_right</i>
                             </div>
                         </a>
-                        <a target="_blank" href="">
+                        <a target="_blank" href="https://www.linkedin.com/in/hilary-hampton/">
                             <div class="row middle">
                                 <img class="inline icon-30 xs-padding" src="assets/img/icon-linkedin-black.svg">
                                 <p class="inline sm-left-padding"><b>LinkedIn</b> /hilary-hampton</p>
@@ -121,7 +121,7 @@
                                 <i class="material-icons inline">keyboard_arrow_right</i>
                             </div>
                         </a>
-                        <a target="_blank" href="">
+                        <a target="_blank" href="https://twitter.com/hifromhilary">
                             <div class="row middle">
                                 <img class="inline icon-30 xs-padding" src="assets/img/icon-twitter-black.svg">
                                 <p class="inline sm-left-padding"><b>Twitter</b> @hifromhilary</p>
