--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@
         
         <div id="fullpage"> 
             <div class="section white-bg primary">
-                <div class="slide bg-image" data-anchor="1about" style="background-image: url(assets/img/background-1.png)">
-                    <div class="sm-max-width middle primary">
+                <div class="slide bg-image-right" data-anchor="1about" style="background-image: url(assets/img/bg-white1.jpg);">
+                    <div class="md-max-width primary">
                         <h1>Hi, I'm Hilary</h1>
                         <h3 class="inline sm-bottom-padding">I'm a&nbsp;</h3> 
-                        <h3 class="inline"><span class="block rotate underline" style="width: 200px;">designer, coder, planner, techie, badass</span></h3>
+                        <h3 class="inline"><span class="block rotate underline" style="width: 200px;">ui/ux&nbsp;designer, brand&nbsp;developer, web&nbsp;coder, problem&nbsp;solver, tech&nbsp;lady, femmé&nbsp;badass</span></h3>
                         <h3 class="inline">.</h3>
                         <p>I design solutions to problems for brands and clients. Fluent in all things design and trained in Silicon Valley. Great designs start with well defined problems, and lots of planning. </p>
+                    </div>
+                    <div id="" class="hidden middle">
+                        <div class="sm-padding">
+                            
+                        </div>
                     </div>
                 </div>
                 <!--<div class="slide bg-image" id="about-3" data-anchor="about-3" style="background-image: url(assets/img/background-3.png)">
@@ -82,23 +87,27 @@
                     </div>
                 </div>-->
             </div>
-            <div class="section light-grey-bg" >
-                <div class="slide" data-anchor="2edison">
-                    <div class="sm-max-width md-padding">
-                        <h1>Edison Software</h1>
+            <div class="section white-bg" >
+                <div class="slide bg-image-right" data-anchor="2edison" style="background-image: url(assets/img/bg-white2.jpg);">
+                    <div class="md-max-width md-padding">
+                        <h1>Senior Designer</h1>
+                        <h3>Edison Software</h3>
+                        <p>Creating interfaces and great experiences for web, mobile, and desktop.</p>
                     </div>
                 </div>
             </div>
             <div class="section white-bg primary">
-                <div class="slide" data-anchor="3lefthook">
-                    <div class="sm-max-width md-padding">
-                        <h1>Left Hook</h1>
+                <div class="slide bg-image-right" data-anchor="3lefthook" style="background-image: url(assets/img/bg-white3.jpg);">
+                    <div class="md-max-width md-padding">
+                        <h1>Creative Director</h1>
+                        <h3>Left Hook Design</h3>
+                        <p>Building brands and developing websites for companies and small businesses.</p>
                     </div>
                 </div>
             </div>
             <div class="section white-bg">
-                <div class="slide" data-anchor="4contact">
-                    <div class="sm-max-width">
+                <div class="slide bg-image-right" data-anchor="4contact" style="background-image: url(assets/img/bg-white4.jpg);">
+                    <div class="md-max-width">
                         <h1>Contact</h1>
                         <a target="_blank" href="https://www.instagram.com/hifromhilary">
                             <div class="row middle">
@@ -114,7 +123,7 @@
                                 <i class="material-icons inline">keyboard_arrow_right</i>
                             </div>
                         </a>
-                        <a target="_blank" href="">
+                        <a target="_blank" href="https://www.facebook.com/hilaryhampton672">
                             <div class="row middle">
                                 <img class="inline icon-30 xs-padding" src="assets/img/icon-facebook-black.svg">
                                 <p class="inline sm-left-padding"><b>Facebook</b> /hilaryhampton672</p>
@@ -168,7 +177,8 @@
             navigationPosition: 'left',
             navigationTooltips: ['About', 'Edison', 'Left Hook', 'Contact'],
             showActiveTooltip: false,
-            touchSensitivity: 25,
+            scrollingSpeed: 800,
+            touchSensitivity: 15,
             //slidesNavigation: false,
             //controlArrows: true,
             //slidesNavPosition: 'bottom',
