--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="fullpage"> 
             <div class="section white-bg primary">
                 <div class="slide bg-image-right" data-anchor="1about" style="background-image: url(assets/img/bg-white1.jpg);">
-                    <div class="md-max-width primary">
+                    <div class="md-max-width primary" style="padding-top: 15%;">
                         <h1>Hi, I'm Hilary</h1>
                         <h3 class="inline sm-bottom-padding">I'm a&nbsp;</h3> 
                         <h3 class="inline"><span class="block rotate underline" style="width: 200px;">ui/ux&nbsp;designer, brand&nbsp;developer, web&nbsp;coder, problem&nbsp;solver, tech&nbsp;lady, femmé&nbsp;badass</span></h3>
@@ -89,7 +89,7 @@
             </div>
             <div class="section white-bg" >
                 <div class="slide bg-image-right" data-anchor="2edison" style="background-image: url(assets/img/bg-white2.jpg);">
-                    <div class="md-max-width md-padding">
+                    <div class="md-max-width" style="padding-top: 15%;">
                         <h1>Senior Designer</h1>
                         <h3>Edison Software</h3>
                         <p>Creating interfaces and great experiences for web, mobile, and desktop.</p>
@@ -98,7 +98,7 @@
             </div>
             <div class="section white-bg primary">
                 <div class="slide bg-image-right" data-anchor="3lefthook" style="background-image: url(assets/img/bg-white3.jpg);">
-                    <div class="md-max-width md-padding">
+                    <div class="md-max-width" style="padding-top: 15%;">
                         <h1>Creative Director</h1>
                         <h3>Left Hook Design</h3>
                         <p>Building brands and developing websites for companies and small businesses.</p>
@@ -107,7 +107,7 @@
             </div>
             <div class="section white-bg">
                 <div class="slide bg-image-right" data-anchor="4contact" style="background-image: url(assets/img/bg-white4.jpg);">
-                    <div class="md-max-width">
+                    <div class="md-max-width" style="padding-top: 15%;">
                         <h1>Contact</h1>
                         <a target="_blank" href="https://www.instagram.com/hifromhilary">
                             <div class="row middle">
@@ -169,6 +169,7 @@
             scrollOverflow: true,
             continuousVertical: true,
             loopHorizontal: true,
+            verticalCentered: false,
             //navigation
             anchors:['1about', '2edison', '3lefthook', '4contact'],
             menu: ['#menu', '#menu-list'],
