--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
         <div id="fullpage"> 
             <div class="section white-bg primary">
                 <div class="slide bg-image-right" data-anchor="1about" style="background-image: url(assets/img/bg-white1.jpg);">
-                    <div class="md-max-width primary" style="padding-top: 15%;">
-                        <h1>Hi, I'm Hilary</h1>
-                        <h3 class="inline sm-bottom-padding">I'm a&nbsp;</h3> 
-                        <h3 class="inline"><span class="block rotate underline" style="width: 200px;">ui/ux&nbsp;designer, brand&nbsp;developer, web&nbsp;coder, problem&nbsp;solver, tech&nbsp;lady, femmé&nbsp;badass</span></h3>
-                        <h3 class="inline">.</h3>
-                        <p>I design solutions to problems for brands and clients. Fluent in all things design and trained in Silicon Valley. Great designs start with well defined problems, and lots of planning. </p>
+                    <div class="md-max-width primary">
+                        <div class="lg-top-padding">
+                            <h1>Hi, I'm Hilary</h1>
+                            <h3 class="inline sm-bottom-padding">I'm a&nbsp;</h3> 
+                            <h3 class="inline"><span class="block rotate underline" style="width: 200px;">ui/ux&nbsp;designer, brand&nbsp;developer, web&nbsp;coder, problem&nbsp;solver, tech&nbsp;lady, femmé&nbsp;badass</span></h3>
+                            <h3 class="inline">.</h3>
+                            <p>I design solutions to problems for brands and clients. Fluent in all things design and trained in Silicon Valley. Great designs start with well defined problems, and lots of planning. </p>
+                        </div>
                     </div>
                     <div id="" class="hidden middle">
                         <div class="sm-padding">
@@ -89,54 +91,60 @@
             </div>
             <div class="section white-bg" >
                 <div class="slide bg-image-right" data-anchor="2edison" style="background-image: url(assets/img/bg-white2.jpg);">
-                    <div class="md-max-width" style="padding-top: 15%;">
-                        <h1>Senior Designer</h1>
-                        <h3>Edison Software</h3>
-                        <p>Creating interfaces and great experiences for web, mobile, and desktop.</p>
+                    <div class="md-max-width">
+                        <div class="lg-top-padding">
+                            <h1>Senior Designer</h1>
+                            <h3>Edison Software</h3>
+                            <p>Creating interfaces and great experiences for web, mobile, and desktop.</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="section white-bg primary">
                 <div class="slide bg-image-right" data-anchor="3lefthook" style="background-image: url(assets/img/bg-white3.jpg);">
-                    <div class="md-max-width" style="padding-top: 15%;">
-                        <h1>Creative Director</h1>
-                        <h3>Left Hook Design</h3>
-                        <p>Building brands and developing websites for companies and small businesses.</p>
+                    <div class="md-max-width">
+                        <div class="lg-top-padding">
+                            <h1>Creative Director</h1>
+                            <h3>Left Hook Design</h3>
+                            <p>Building brands and developing websites for companies and small businesses.</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="section white-bg">
                 <div class="slide bg-image-right" data-anchor="4contact" style="background-image: url(assets/img/bg-white4.jpg);">
-                    <div class="md-max-width" style="padding-top: 15%;">
-                        <h1>Contact</h1>
-                        <a target="_blank" href="https://www.instagram.com/hifromhilary">
-                            <div class="row middle">
-                                <img class="inline icon-30 xs-padding" src="assets/img/icon-insta-black.svg">
-                                <p class="inline sm-left-padding"><b>Instagram</b> @hifromhilary</p>
-                                <i class="material-icons inline">keyboard_arrow_right</i>
-                            </div>
-                        </a>
-                        <a target="_blank" href="https://www.linkedin.com/in/hilary-hampton/">
-                            <div class="row middle">
-                                <img class="inline icon-30 xs-padding" src="assets/img/icon-linkedin-black.svg">
-                                <p class="inline sm-left-padding"><b>LinkedIn</b> /hilary-hampton</p>
-                                <i class="material-icons inline">keyboard_arrow_right</i>
-                            </div>
-                        </a>
-                        <a target="_blank" href="https://www.facebook.com/hilaryhampton672">
-                            <div class="row middle">
-                                <img class="inline icon-30 xs-padding" src="assets/img/icon-facebook-black.svg">
-                                <p class="inline sm-left-padding"><b>Facebook</b> /hilaryhampton672</p>
-                                <i class="material-icons inline">keyboard_arrow_right</i>
-                            </div>
-                        </a>
-                        <a target="_blank" href="https://twitter.com/hifromhilary">
-                            <div class="row middle">
-                                <img class="inline icon-30 xs-padding" src="assets/img/icon-twitter-black.svg">
-                                <p class="inline sm-left-padding"><b>Twitter</b> @hifromhilary</p>
-                                <i class="material-icons inline">keyboard_arrow_right</i>
-                            </div>
-                        </a>
+                    <div class="md-max-width">
+                        <div class="lg-top-padding">
+                            <h1>Contact</h1>
+                            <a target="_blank" href="https://www.instagram.com/hifromhilary">
+                                <div class="row middle">
+                                    <img class="inline icon-30 xs-padding" src="assets/img/icon-insta-black.svg">
+                                    <p class="inline sm-left-padding"><b>Instagram</b> @hifromhilary</p>
+                                    <i class="material-icons inline">keyboard_arrow_right</i>
+                                </div>
+                            </a>
+                            <a target="_blank" href="https://www.linkedin.com/in/hilary-hampton/">
+                                <div class="row middle">
+                                    <img class="inline icon-30 xs-padding" src="assets/img/icon-linkedin-black.svg">
+                                    <p class="inline sm-left-padding"><b>LinkedIn</b> /hilary-hampton</p>
+                                    <i class="material-icons inline">keyboard_arrow_right</i>
+                                </div>
+                            </a>
+                            <a target="_blank" href="https://www.facebook.com/hilaryhampton672">
+                                <div class="row middle">
+                                    <img class="inline icon-30 xs-padding" src="assets/img/icon-facebook-black.svg">
+                                    <p class="inline sm-left-padding"><b>Facebook</b> /hilaryhampton672</p>
+                                    <i class="material-icons inline">keyboard_arrow_right</i>
+                                </div>
+                            </a>
+                            <a target="_blank" href="https://twitter.com/hifromhilary">
+                                <div class="row middle">
+                                    <img class="inline icon-30 xs-padding" src="assets/img/icon-twitter-black.svg">
+                                    <p class="inline sm-left-padding"><b>Twitter</b> @hifromhilary</p>
+                                    <i class="material-icons inline">keyboard_arrow_right</i>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
